[package]
name = "cesid_os"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.x"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
